--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(LIBRARY_SRCS
   libraries/SimpleBLE/src/SimpleBLE.cpp
   libraries/SPIFFS/src/SPIFFS.cpp
   libraries/SPI/src/SPI.cpp
+  libraries/Ticker/src/Ticker.cpp
   libraries/Update/src/Updater.cpp
   libraries/Update/src/HttpsOTAUpdate.cpp
   libraries/WebServer/src/WebServer.cpp
@@ -149,6 +150,7 @@ set(includedirs
   libraries/SimpleBLE/src
   libraries/SPIFFS/src
   libraries/SPI/src
+  libraries/Ticker/src
   libraries/Update/src
   libraries/WebServer/src
   libraries/WiFiClientSecure/src
